[gd_scene load_steps=4 format=3 uid="uid://ba0tnj74ux3tm"]

[ext_resource type="Theme" uid="uid://cmeiu126swihn" path="res://my assets/themes/default.tres" id="1_6kgbi"]
[ext_resource type="Script" uid="uid://da1y23rh116ru" path="res://my assets/database/GUI/Windows/WindowManager.gd" id="2_0kd01"]
[ext_resource type="Script" uid="uid://dgl4m715kfwxh" path="res://my assets/mold window/MoldWindow.gd" id="3_q8atw"]

[node name="mold window" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 252.0
offset_top = 125.0
offset_right = -212.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6kgbi")
script = ExtResource("2_0kd01")

[node name="MoldWindowtab" type="TabContainer" parent="." node_paths=PackedStringArray("parent", "instructions_add_label", "line_edit")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
current_tab = 3
tabs_visible = false
script = ExtResource("3_q8atw")
parent = NodePath("..")
instructions_add_label = NodePath("yes no cancel add line/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer/VBoxContainer/instructions")
line_edit = NodePath("yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/LineEdit")

[node name="instructions only" type="HBoxContainer" parent="MoldWindowtab"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="leftSpace" type="MarginContainer" parent="MoldWindowtab/instructions only"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/instructions only"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/instructions only/MarginContainer"]
layout_mode = 2

[node name="top" type="MarginContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="instructions" type="MarginContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/instructions"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/instructions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="instructions" type="Label" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "instructions wrap to next line so one line is separated in to multiple lines like this one!!!"
autowrap_mode = 3

[node name="buttons" type="MarginContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/buttons"]
layout_mode = 2

[node name="space" type="MarginContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="thanks!" type="Button" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Thanks!"

[node name="space2" type="MarginContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="bottom" type="MarginContainer" parent="MoldWindowtab/instructions only/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="rightborder" type="MarginContainer" parent="MoldWindowtab/instructions only"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="x" type="MarginContainer" parent="MoldWindowtab/instructions only"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="X" type="Button" parent="MoldWindowtab/instructions only/x"]
layout_mode = 2
text = "X"

[node name="yes no cancel" type="HBoxContainer" parent="MoldWindowtab"]
visible = false
layout_mode = 2
mouse_filter = 0
metadata/_tab_index = 1

[node name="leftSpace" type="MarginContainer" parent="MoldWindowtab/yes no cancel"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/yes no cancel"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel/MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="top" type="MarginContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
mouse_filter = 0

[node name="instructions" type="MarginContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/instructions"]
layout_mode = 2
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/instructions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="instructions" type="Label" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_filter = 0
text = "instructions wrap to next line so one line is separated in to multiple lines like this one!!!"
autowrap_mode = 3

[node name="buttons" type="MarginContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons"]
layout_mode = 2

[node name="yes" type="Button" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="space" type="MarginContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="no" type="Button" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="space2" type="MarginContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="cancel" type="Button" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="bottom" type="MarginContainer" parent="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="rightborder" type="MarginContainer" parent="MoldWindowtab/yes no cancel"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="x" type="MarginContainer" parent="MoldWindowtab/yes no cancel"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="X" type="Button" parent="MoldWindowtab/yes no cancel/x"]
layout_mode = 2
text = "X"

[node name="yes no cancel add text" type="HBoxContainer" parent="MoldWindowtab"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="leftSpace" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer"]
layout_mode = 2

[node name="top" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="instructions" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/instructions"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/instructions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="instructions" type="Label" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "instructions wrap to next line so one line is separated in to multiple lines like this one!!!"
autowrap_mode = 3

[node name="buttons" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer"]
layout_mode = 2

[node name="space" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2

[node name="submit" type="Button" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Submit"

[node name="space2" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2

[node name="cancel" type="Button" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="space3" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1

[node name="bottom" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="rightborder" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="x" type="MarginContainer" parent="MoldWindowtab/yes no cancel add text"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="X" type="Button" parent="MoldWindowtab/yes no cancel add text/x"]
layout_mode = 2
text = "X"

[node name="yes no cancel add line" type="HBoxContainer" parent="MoldWindowtab"]
layout_mode = 2
metadata/_tab_index = 3

[node name="leftSpace" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer"]
layout_mode = 2

[node name="top" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="instructions" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/instructions"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/instructions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="instructions" type="Label" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/instructions/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "instructions wrap to next line so one line is separated in to multiple lines like this one!!!"
autowrap_mode = 3

[node name="buttons" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer"]
layout_mode = 2

[node name="space" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2

[node name="submit" type="Button" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Submit"

[node name="space2" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2

[node name="cancel" type="Button" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="space3" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer"]
layout_mode = 2

[node name="bottom" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="rightborder" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="x" type="MarginContainer" parent="MoldWindowtab/yes no cancel add line"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="X" type="Button" parent="MoldWindowtab/yes no cancel add line/x"]
layout_mode = 2
text = "X"

[connection signal="pressed" from="MoldWindowtab/instructions only/MarginContainer/VBoxContainer/buttons/HBoxContainer/thanks!" to="MoldWindowtab" method="any_button"]
[connection signal="pressed" from="MoldWindowtab/instructions only/x/X" to="MoldWindowtab" method="any_button"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer/yes" to="MoldWindowtab" method="yes"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer/no" to="MoldWindowtab" method="no"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer/cancel" to="MoldWindowtab" method="any_button"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel/MarginContainer/VBoxContainer/buttons/HBoxContainer/cancel" to="MoldWindowtab" method="cancel"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel/x/X" to="MoldWindowtab" method="any_button"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer/submit" to="MoldWindowtab" method="submit"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer/cancel" to="MoldWindowtab" method="any_button"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add text/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer/cancel" to="MoldWindowtab" method="cancel"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add text/x/X" to="MoldWindowtab" method="any_button"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer/submit" to="MoldWindowtab" method="line_submit"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer/cancel" to="MoldWindowtab" method="any_button"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/HBoxContainer/cancel" to="MoldWindowtab" method="cancel"]
[connection signal="text_submitted" from="MoldWindowtab/yes no cancel add line/MarginContainer/VBoxContainer/buttons/VBoxContainer/LineEdit" to="MoldWindowtab" method="submit_text"]
[connection signal="pressed" from="MoldWindowtab/yes no cancel add line/x/X" to="MoldWindowtab" method="any_button"]
